--- a/index.html
+++ b/index.html
@@ -36,25 +36,25 @@
 	   Your browser isn't invited for super fun audio time.
     </audio>
     <div class="balloons text-center" id="b1">
-    	<h2 style="color:#F2B300;">H</h2>
+    	<h2 style="color:#F2B300;">乔</h2>
     </div>
     <div class="balloons text-center" id="b2">
-    	<h2 style="color:#0719D4;">B</h2>
+    	<h2 style="color:#0719D4;">石</h2>
     </div>
 	<div class="balloons text-center" id="b3">
-    	<h2 style="color:#D14D39;">D</h2>
+    	<h2 style="color:#D14D39;">丽</h2>
     </div>
 	<div class="balloons text-center" id="b4">
-    	<h2 style="color:#8FAD00;">X</h2>
+    	<h2 style="color:#8FAD00;">生</h2>
     </div>
 	<div class="balloons text-center" id="b5">
-    	<h2 style="color:#8377E4;">O</h2>
+    	<h2 style="color:#8377E4;">日</h2>
     </div>
     <div class="balloons text-center" id="b6">
-    	<h2 style="color:#99C96A;">L</h2>
+    	<h2 style="color:#99C96A;">快</h2>
     </div>
     <div class="balloons text-center" id="b7">
-    	<h2 style="color:#20CFB4;">A</h2>
+    	<h2 style="color:#20CFB4;">乐</h2>
     </div>
 
     <img src="Balloon-Border.png" width="100%" class="balloon-border">
@@ -104,66 +104,48 @@
 		</div>
 		<div class="row message">
 			<div class="col-md-12">
-				<p>Today is...</p>
-				<p>as beautiful as other days</p>
-				<p>but you realize</p>
-				<p>another year has gone</p>
-				<p>in a blink of the eyes</p>
-				<p><strong>however</strong></p>
-				<p>Do you know..?</p>
-				<p>today is just special</p>
-				<p>so special to you</p>
-				<p>that's why</p>
-				<p>Let's make it...</p>
-				<p>the best celebration ever</p>
-				<p>and let me share...</p>
-				<p>a piece of happiness to you</p>
-				<p>I made all this...</p>
-				<p>as a birthday present to you</p>
-				<p>thanks for being there</p>
-				<p>thanks for the friendship we made</p>
-				<p>thanks for everything</p>
-				<p>I wish you all the best</p>
-				<p>May your life be at ease</p>
-				<p>May all your wishes come true</p>
-				<p>Remember</p>
-				<p>your ambitions</p>
-				<p>you live as a free bird...</p>
-				<p>flying in the blue sky</p>
-				<p>Now things are different...</p>
-				<p>real story of your life</p>
-				<p>is just about to begin</p>
-				<p>indeed..</p>
-				<p>but...</p>
-				<p>don't worry</p>
-				<p>because...</p>
-				<p>God has your back</p>
-				<p>and</p>
-				<p>this year will be better</p>
-				<p>and I hope</p>
-				<p>you'll find...</p>
-				<p>happiness along the way</p>
-				<p>keep your spirit up</p>
-				<p>enjoy every single moment...</p>
-				<p>that you experience today</p>
-				<p>fill it with your most beautiful smile</p>
-				<p>and make it the best memory..</p>
-				<p>lastly...</p>
-				<p>I'd like to wish you one more time</p>
-				<p>a very happy birthday Xola Mathembisa</p>
+				<p>2022.03.30,阴历二月二十八</p>
+				<p>倒计时中……</p>
+				<p>我们的小鹌鹑即将迎来</p>
+				<p>心中永远的18岁(其实24岁)</p>
+				<p>疫情的中的我</p>
+				<p>只能以这样来表达对你的祝福</p>
+				<p>等解封后</p>
+				<p>你想吃什么，想去哪，想做什么</p>
+				<p>我都可以随时待命的哦</p>
+				<p>小李在这祝福我们的小乔：</p>
+				<p>愿你余生前程似锦,未来可期</p>
+				<p>愿你一生温暖纯良,不舍爱与自由</p>
+				<p>愿你一生欢喜,不为世俗所及</p>
+				<p>其实这些话,都是网上抄的</p>
+				<p>但祝福是真的</p>
+				<p>只愿你被这世界温柔相待</p>
+            			<p>生日,它快不快乐我不关心</p>
+            			<p>因为我不认识它</p>
+           			<p>在这个世界上</p>
+            			<p>我希望你是快乐的</p>
+            			<p>都自由，都拥有</p>
+				<p>不必太纠结于当下</p>
+				<p>也不必太忧虑未来</p>
+				<p>愿你遇到一个爱你的人且你爱的人</p>
+				<p>一辈子不用长大</p>
+				<p>嘿嘿，胖一点，多吃一点</p>
+				<p>乔石丽，要永远开心、快乐</p>
+				<p>乔石丽，你是最棒的哦</p>
+				<p>小可爱，生日快乐啊~~</p>
 			</div>
 		</div>
 		<div class="navbar navbar-fixed-bottom">
 			<div class="row">
 				<div class="col-md-6 text-center col-md-offset-3">
-					<button class="btn btn-primary" id="turn_on">Turn On Lights</button>
-					<button class="btn btn-primary" id="play">Play Music</button>
-					<button class="btn btn-primary" id="bannar_coming">Let's Decorate</button>
-					<button class="btn btn-primary" id="balloons_flying">Fly With Balloons</button>
-					<button class="btn btn-primary" id="cake_fadein">Most Delicious Cake Ever</button>
-					<button class="btn btn-primary" id="light_candle"> Light Candle</button>
+					<button class="btn btn-primary" id="turn_on">&nbsp;让我们开启今晚的旅程&nbsp;</button>
+					<button class="btn btn-primary" id="play">需要点音乐</button>
+					<button class="btn btn-primary" id="bannar_coming">有点简陋，给你装饰一下</button>
+					<button class="btn btn-primary" id="balloons_flying">让一切烦恼随着气球飞逝</button>
+					<button class="btn btn-primary" id="cake_fadein">小鹌鹑，我给你做了个蛋糕</button>
+					<button class="btn btn-primary" id="light_candle"> 我们一起点蜡烛，许下美美的心愿</button>
 					<button class="btn btn-primary" id="wish_message">Happy Birthday</button>
-					<button class="btn btn-primary" id="story">A mesage for you</button>
+					<button class="btn btn-primary" id="story">感动的不要不要的祝福：</button>
 					<!-- <button class="btn btn-primary" id="cake_cut">Lrt's Cut the Cake</button> -->
 				</div>
 			</div>
